
SVN
-------------------------------

XML:   Resolved issue CASTOR-1590 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Source code cleanup at Castor XML test framework.
       Details: http://jira.codehaus.org/browse/CASTOR-1590
       (Ralf - 20060929)

XML:   Resolved issue CASTOR-1588 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Fixed problem with stack overflow in CTF maste test suite
       Details: http://jira.codehaus.org/browse/CASTOR-1588
       (Werner - 20060929)

XML:   Resolved issue CASTOR-1583 using contribution from Edward Kuns [edward.kuns@aspect.com]
       CTF doesn't run properly under Fedora Core Linux.
       Details: http://jira.codehaus.org/browse/CASTOR-1583
       (Ralf - 20060927)

XML:   Resolved issue CASTOR-1566 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with incorrect generation of unmarshal methods for extensions/restrictions 
       where extended/restricted type is in an imported schema.
       Details: http://jira.codehaus.org/browse/CASTOR-1566
       (Werner - 20060927)

XML:   Resolved issue CASTOR-1574 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added '0' and '1' as possible values for setting 'nillable' attribute.
       Details: http://jira.codehaus.org/browse/CASTOR-1574
       (Werner - 20060921)
       
XML:   Resolved issue CASTOR-1060 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Fixed problem in SourceGenerator generating multiple @return comments.
       Details: http://jira.codehaus.org/browse/CASTOR-1060
       (Werner - 20060925)

XML:   Resolved issue CASTOR-1579 using contribution from Ontje Luensdorf [The_COM@gmx.de]
       Added a feature that allows getter methods starting with the prefix 'iterate'
       to be treated in a special way.
       Details: http://jira.codehaus.org/browse/CASTOR-1579
       (Werner - 20060925)
